update crawler parse